@startuml

skinparam monochrome true

abstract class DocumentDbModel

abstract class DocumentDbVersionedModel

class Message {
  +id uuid
  +senderServiceId uuid
  +senderUserId uuid
  +taxCode string
  +subject string
  +content string
}

class Notification {
  +id uuid
  +messageId uuid
  +taxCode string
}

class EmailNotification {
  +id uuid
  +notificationId uuid
  +taxCode string
  +fromAddress string
  +toAddress string
  +status string
}

class Service {
  +id uuid
  +organizationName string
  +organizationDepartment string
  +serviceName string
}

class Profile {
  +taxCode string
  +Email string
}

DocumentDbModel <|-- DocumentDbVersionedModel

DocumentDbModel <|-- Message

DocumentDbModel <|-- Notification

EmailNotification <--o Notification

DocumentDbVersionedModel <|-- Service

DocumentDbVersionedModel <|-- Profile

Service "1" o-left- "many" Message
Message "1" o-left- "?" Notification

@enduml